<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimerAndroidHelvete</string>
    <string name="timer_title_section">Timer</string>
    <string name="stopwatch_title_section">Stopwatch</string>
    <string name="action_settings">Settings</string>
    <string name="timer_text">00:00:00</string>
    <string name="start_button_title">Start</string>
    <string name="stop_button_title">Stop</string>
    <string name="reset_button_title">Reset</string>
    <string name="timer_value">Set timer</string>
    <string name="timer_notification_title">Foo bar timer</string>
    <string name="notification_text">foo bar</string>
    <string name="stopwatch_text_value">00:00.00</string>
    <string name="new_message_notification_title_template">%1$s</string>
    <string name="new_message_notification_placeholder_text_template">%1$s</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="timer_start_button_text">Start</string>
    <string name="timer_stop_button_text">Reset</string>
    <string name="cancel">cancel alarm</string>
    <string name="dialog_timer_alert">The timer has ended!</string>
    <string name="alarm">Dismiss alarm</string>
    <string name="actionbar_timer_title">Timer</string>
    <string name="actionbar_stopwatch_title">Stopwatch</string>

</resources>
