<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    tools:context="se.christianwiedel.timerandroid.MainActivity$PlaceholderFragment">


    <TextView
        android:id="@+id/timer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/timer_text"
        android:layout_marginTop="42dp"
        android:textSize="@dimen/bigFont"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textColor="@color/label_font_color"
        />
    <TextView
        android:id="@+id/dummy_timer"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/timer_textView"
        />



    <Button
        android:id="@+id/timer_start_button"
        android:layout_width="@dimen/button_radius"
        android:layout_height="@dimen/button_radius"
        android:text="@string/timer_start_button_text"
        android:textSize="@dimen/labelFont"
        android:fontFamily="sans-serif-light"
        android:layout_toLeftOf="@id/dummy_timer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/timer_textView"
        android:onClick="onStartTimer"
        android:background="@drawable/round_green"
        />

    <Button
        android:id="@+id/timer_reset_button"
        android:layout_width="@dimen/button_radius"
        android:layout_height="@dimen/button_radius"
        android:text="@string/timer_stop_button_text"
        android:textSize="@dimen/labelFont"
        android:textColor="@color/inactive_gray"
        android:fontFamily="sans-serif-light"
        android:layout_toRightOf="@id/dummy_timer"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/timer_textView"
        android:onClick="onResetTimer"
        android:background="@drawable/round_inactive_gray"
        />
<!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button_title"
        android:id="@+id/timer_reset_button"

        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/timer_textView"
        android:layout_alignParentRight="true"
        android:onClick="onResetTimer"
        />


    <Button
        android:id="@+id/timer_setTimer_button"
        android:layout_below="@id/timer_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_value"
        android:onClick="showTimePickerDialog" />
-->
    <TimePicker
        android:layout_below="@+id/timer_start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer_timePicker"
        android:layout_centerHorizontal="true"

        />





</RelativeLayout>
