<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    tools:context="se.christianwiedel.timerandroid.MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stopwatch_text_value"
        android:id="@+id/stopwatch_laptextView"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/stopwatch_tv_marginbottom"
        android:textSize="@dimen/smallLapFontSize"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textColor="@color/label_font_color"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopwatch_laptextView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/stopwatch_text_value"
        android:id="@+id/stopwatch_textView"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="@dimen/stopwatch_tv_marginbottom"
        android:textSize="@dimen/bigFont"
        android:fontFamily="sans-serif-thin"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:textColor="@color/label_font_color"
        />

    <TextView
        android:id="@+id/dummy_stopwatch"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/stopwatch_textView"
        />

    <Button
        android:textSize="@dimen/labelFont"
        android:fontFamily="sans-serif-light"
        android:layout_width="@dimen/button_radius"
        android:layout_height="@dimen/button_radius"
        android:text="@string/start_button_title"
        android:id="@+id/stopwatch_start_button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/stopwatch_textView"
        android:layout_toLeftOf="@id/dummy_stopwatch"
        android:onClick="startStopWatch"
        android:background="@drawable/round_green"
        android:textColor="@color/button_font_color"
        />



    <Button
        android:textSize="@dimen/labelFont"
        android:fontFamily="sans-serif-light"
        android:layout_width="@dimen/button_radius"
        android:layout_height="@dimen/button_radius"
        android:text="@string/reset_button_title"
        android:id="@+id/stopwatch_reset_button"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@id/stopwatch_textView"
        android:onClick="resetStopWatch"
        android:background="@drawable/round_black"
        android:textColor="@color/button_font_color"
        android:layout_toRightOf="@id/dummy_stopwatch"
        />

    <ListView
        android:layout_marginTop="@dimen/laps_list_top_margin"
        android:id="@+id/stopwatch_listview"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopwatch_start_button"
        android:layout_alignParentLeft="true"
        />



</RelativeLayout>
